# human-pose-tracking

./: .gitattributes  CMakeLists.txt  package.xml  setup.py
include/np_bridge/: np_bridge.py
msg/: TrackedPoses.msg
resources/: resnet18_baseline_att_224x224_A_epoch_249_trt.pth
scripts/: pose_estimator.py  pose_tracker.py  pose_visualizer.py
src/: pose_estimator.py  pose_tracker.py  pose_visualizer.py  tictoc.py
src/human_pose_tracking/: keypoints_tracker.py  pose_utils.py
