<?xml version="1.0"?>
<package>
  <name>trt_pose</name>
  <version>1.0.0</version>
  <description>Real-time pose estimation accelerated with NVIDIA TensorRT</description>

  <license>GPLv3</license>
  <maintainer email="slin@ttic.edu">Shengjie Lin</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
</package>
